added pointer cursor for onClick events

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
 
 <div class="hour-chart" id="hour_chart_1"></div>
+<br />
+<div class="hour-chart" id="hour_chart_2"></div>
 
 <script type="text/javascript" src="js/hour-chart.js"></script>
 </body>
