updated time calculate method and draw time bar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <br />
 <div class="hour-chart" id="hour_chart_2"></div>
 
-<script type="text/javascript" src="js/hour-chart.js"></script>
+<script type="text/javascript" src="js/hour-chart_backup.js"></script>
 </body>
 </html>
