--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 <br />
 <div class="hour-chart" id="hour_chart_2"></div>
 
-<script type="text/javascript" src="js/hour-char.js"></script>
+<script type="text/javascript" src="js/hour-chart.js"></script>
+<script type="text/javascript">
+    var hour_chart = new HourChart('hour_chart_1');
+
+    hour_chart.add(new Date(2015,2,6,16,0,0), new Date(2015,2,7,10,30,0));
+    hour_chart.add(new Date(2015,2,7,12,27,0), new Date(2015,2,7,13,27,0));
+    hour_chart.add(new Date(2015,2,7,13,28,0), new Date(2015,2,7,13,31,0));
+    hour_chart.add(new Date(2015,2,8,15,27,0), new Date(2015,2,7,13,27,0));
+</script>
 </body>
 </html>
