--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <script type="text/javascript" src="js/hour-chart.js"></script>
 <script type="text/javascript">
     var hour_chart = new HourChart('hour_chart_1');
+    var hour_chart_2 = new HourChart('hour_chart_2', {delay: 1.5});
 
     hour_chart.add(new Date(2015,2,6,16,0,0), new Date(2015,2,7,10,30,0));
     hour_chart.add(new Date(2015,2,7,12,27,0), new Date(2015,2,7,13,27,0));
-    hour_chart.add(new Date(2015,2,7,13,28,0), new Date(2015,2,7,13,31,0));
-    hour_chart.add(new Date(2015,2,8,15,27,0), new Date(2015,2,7,13,27,0));
+    hour_chart_2.add(new Date(2015,2,7,10,28,0), new Date(2015,2,7,13,31,0));
 </script>
 </body>
 </html>
