--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     var hour_chart = new HourChart('hour_chart_1');
     var hour_chart_2 = new HourChart('hour_chart_2', {delay: 1.5});
 
-    hour_chart.add(new Date(2015,2,5,3,0,0), new Date(2015,2,6,4,30,0));
-	hour_chart.add(new Date(2015,2,7,18,0,0), new Date(2015,2,7,23,30,0));
+    // hour_chart.add(new Date(2016,1,5,20,0,0), new Date(2016,1,4,4,30,0));
+	hour_chart.add(new Date(2016,1,5,10,0,0), new Date(2016,1,5,11,30,0));
+	hour_chart_2.add(new Date(2016,1,5,5,30,0), new Date(2016,1,7,5,0,0));
     // hour_chart.add(new Date(2015,2,7,12,27,0), new Date(2015,2,7,13,27,0));
     // hour_chart_2.add(new Date(2015,2,7,10,28,0), new Date(2015,2,7,13,31,0));
 
@@ -42,7 +43,7 @@
 	};
 
 	function add_1() {
-    	hour_chart.add(new Date(2015,2,7,13,0,0), new Date(2015,2,7,14,30,0));
+    	hour_chart.add(new Date(2015,2,7,13,0,0), new Date(2015,2,7,1,30,0));
 	};
 
 	function add_2() {
