Önceki günden devir ve sonraki güne sarkma sorunu düzeltildi

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
     var hour_chart = new HourChart('hour_chart_1');
     var hour_chart_2 = new HourChart('hour_chart_2', {delay: 1.5});
 
-    // hour_chart.add(new Date(2016,1,5,20,0,0), new Date(2016,1,4,4,30,0));
-	hour_chart.add(new Date(2016,1,5,10,0,0), new Date(2016,1,5,11,30,0));
-	hour_chart_2.add(new Date(2016,1,5,5,30,0), new Date(2016,1,7,5,0,0));
+	hour_chart.add(new Date(2016,8,14,0,0,0), new Date(2016,8,13,23,43,0), new Date(2016,8,14,0,29,0));
+	hour_chart_2.add(new Date(2016,8,13,0,0,0), new Date(2016,8,13,23,43,0), new Date(2016,8,14,0,29,0));
+	hour_chart_2.add(new Date(2016,8,13,0,0,0), new Date(2016,8,13,13,30,0), new Date(2016,8,13,14,30,0));
+
+	// hour_chart.add(new Date(2016,1,5,10,0,0), new Date(2016,1,5,11,30,0));
+	// hour_chart.add(new Date(2016,1,5,20,0,0), new Date(2016,1,4,4,30,0));
+	// hour_chart_2.add(new Date(2016,1,4,20,0,0), new Date(2016,1,5,4,30,0));
+	// hour_chart_2.add(new Date(2016,1,4,13,58,0), new Date(2016,1,4,14,08,0));
+	// hour_chart_2.add(new Date(2016,1,5,5,30,0), new Date(2016,1,7,7,30,0));
     // hour_chart.add(new Date(2015,2,7,12,27,0), new Date(2015,2,7,13,27,0));
     // hour_chart_2.add(new Date(2015,2,7,10,28,0), new Date(2015,2,7,13,31,0));
 
